<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="google_maps_key"> COPY THE VALUE FROM GOOGLE CLOUD PLATFORM </string>
    <string name="app_name">潜水伴侣</string>
    <string name="login_phone_emil">请输入手机号/邮箱</string>
    <string name="login_pass">密码登录</string>
    <string name="login">登录</string>
    <string name="login_ed_pass">输入密码（6-12位）</string>
    <string name="login_register_name">注册账号</string>
    <string name="login_forget_pass">忘记密码</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_getcode">获取验证码</string>
    <string name="register_phone_emil">请输入手机号/邮箱</string>
    <string name="register_ed_invite_code">请输入邀请码</string>
    <string name="register_btn">注册</string>
    <string name="register_user_agreement">点击注册即默认同意《用户注册协议》</string>
    <string name="findpass_ed_code">输入验证码</string>
    <string name="findpass_ed_new_pass">请输入新密码</string>
    <string name="findpass_ok_new_pass">确认新密码</string>
    <string name="register_ed_pass">输入密码</string>
    <string name="findpass_toolbar_title">找回密码</string>
    <string name="login_tv">登录</string>
    <string name="update_ed_pass">输入旧密码</string>
    <string name="update_ed_new_pass">请输入新密码</string>
    <string name="login_ed_password">请输入密码</string>
    <string name="login_wechat_tv">微信登录</string>
    <string name="home_startpage">首页</string>
    <string name="home_color_rendition_tv">色彩还原</string>
    <string name="home_integral_gifts_iv">积分好礼</string>
    <string name="home_coach_tv">教练申请</string>
    <string name="home_dive_log_tv">潜水日志</string>
    <string name="loading">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>