<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/cardview_bg_findpass_0F1F36"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <!--手机号-->
    <LinearLayout
        android:id="@+id/ll_ed_phone_emil"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_27_5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:background="@drawable/register_ed_bg_shape"
        >
        <ImageView
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/ic_launcher"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            />
        <EditText
            android:id="@+id/login_ed_phone_emil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:hint="@string/login_phone_emil"
            android:background="@null"
            android:textColor="@color/color_666666"
            android:textStyle="normal"
            android:textSize="@dimen/sp_14"
            />
    </LinearLayout>
    <!--验证码-->

    <LinearLayout
        android:id="@+id/ll_ed_password"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_27_5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:background="@drawable/register_ed_bg_shape"
        >
        <ImageView
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/ic_launcher"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            />
        <EditText
            android:id="@+id/login_ed_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:hint="@string/login_ed_password"
            android:background="@null"
            android:textColor="@color/color_666666"
            android:textStyle="normal"
            android:textSize="@dimen/sp_14"
            />
    </LinearLayout>
    <!--&lt;!&ndash;密码登录&ndash;&gt;-->
    <!--<TextView-->
    <!--android:id="@+id/login_code"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="@dimen/sp_13"-->
    <!--android:text="@string/login_pass"-->
    <!--android:textColor="@color/colorblue"-->
    <!--android:layout_marginTop="@dimen/dp_4"-->
    <!--android:layout_gravity="right"-->
    <!--android:layout_marginRight="@dimen/dp_29_5"-->
    <!--android:textStyle="normal"-->
    <!--/>-->
    <Button
        android:id="@+id/login_denglu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:text="@string/login"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/shape"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:textColor="@color/ffffff"
        android:textStyle="normal"
        tools:ignore="ObsoleteLayoutParam"
        />


    <RelativeLayout
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_boundary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="|"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_7_5"
            android:textColor="@color/ffffff"
            android:layout_marginLeft="@dimen/dp_20"
            />

        <TextView
            android:id="@+id/login_register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_name"
            android:layout_toLeftOf="@id/login_boundary"
            android:layout_marginTop="@dimen/dp_7_5"
            android:layout_marginRight="@dimen/dp_20"
            android:textSize="@dimen/sp_14"
            android:textStyle="normal"
            android:textColor="@color/ffffff"
            />

        <TextView
            android:id="@+id/login_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_boundary"
            android:text="@string/login_forget_pass"
            android:textColor="@color/ffffff"
            android:textSize="@dimen/sp_14"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/dp_7_5"
            android:layout_marginLeft="@dimen/dp_20"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login_tv_shortcut_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="快捷登录"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:textStyle="normal"
            tools:ignore="HardcodedText"
            android:textColor="@color/color_999999"
            />
        <View
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/btn_666666"
            android:layout_toLeftOf="@id/login_tv_shortcut_login"
            android:layout_marginTop="@dimen/dp_49"
            />
        <View
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/btn_666666"
            android:layout_toRightOf="@id/login_tv_shortcut_login"
            android:layout_marginTop="@dimen/dp_49"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/login_wechat"
        android:layout_width="@dimen/dp_36"
        android:layout_height="35dp"
        android:layout_below="@id/login_tv_shortcut_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_13"
        android:src="@mipmap/ic_login_3party_wechat"
        tools:ignore="ObsoleteLayoutParam" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_wechat_tv"
        android:textColor="@color/color_666666"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_7"
        />

</LinearLayout>