<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001128"
    android:clipChildren="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/home_startpage"
            android:textColor="#ffffffff"
            android:layout_centerVertical="true"
            android:textColorHighlight="@color/ffffff"
            android:textSize="@dimen/sp_24"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/home_sourch_iv"
            android:layout_width="@dimen/dp_19"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_17"
            android:layout_marginRight="@dimen/sp_15"
            android:src="@mipmap/icon_search"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_188"
        android:layout_marginLeft="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_55"
        android:layout_marginRight="@dimen/sp_15"
        app:cardCornerRadius="@dimen/sp_15"
        app:cardBackgroundColor="@color/c_00000000"
        >
        <com.zhouwei.mzbanner.MZBannerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mz_banner"
            app:open_mz_mode="true"
            app:canLoop="true"
            app:indicatorAlign="center"
            app:middle_page_cover="true"
            />

    </androidx.cardview.widget.CardView>

    <!--<com.youth.banner.Banner-->
        <!--android:id="@+id/home_banner"-->
        <!--android:layout_width="@dimen/dp_345"-->
        <!--android:layout_height="@dimen/dp_188"-->
        <!--android:layout_marginLeft="@dimen/sp_15"-->
        <!--android:layout_marginTop="@dimen/dp_55"-->
        <!--android:layout_marginRight="@dimen/sp_15" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_279">

        <ImageView
            android:id="@+id/home_color_rendition_iv"
            android:layout_width="@dimen/dp_55"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_34"
            android:src="@mipmap/icon_hy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_color_rendition_iv"
            android:layout_marginLeft="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/home_color_rendition_tv"
            android:textColor="@color/ffffff"
            android:textSize="@dimen/sp_13"
            android:background="?attr/selectableItemBackground"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

        </RelativeLayout>
        <!--积分好礼-->
        <ImageView
            android:id="@+id/home_integral_gifts_iv"
            android:layout_width="@dimen/dp_55"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_118"
            android:src="@mipmap/icon_jf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_integral_gifts_iv"
            android:layout_marginLeft="@dimen/dp_120"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/home_integral_gifts_iv"
            android:textColor="@color/ffffff"
            android:textSize="@dimen/sp_13" />

        <!--教练申请-->
        <ImageView
            android:id="@+id/home_coach_iv"
            android:layout_width="@dimen/dp_55"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_202"
            android:src="@mipmap/icon_sq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_coach_iv"
            android:layout_marginLeft="@dimen/dp_205"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/home_coach_tv"
            android:textColor="@color/ffffff"
            android:textSize="@dimen/sp_13" />
        <!--潜水日至-->
        <ImageView
            android:id="@+id/home_dive_log_iv"
            android:layout_width="@dimen/dp_55"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_287"
            android:src="@mipmap/icon_jf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_dive_log_iv"
            android:layout_marginLeft="@dimen/dp_289"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/home_dive_log_tv"
            android:textColor="@color/ffffff"
            android:textSize="@dimen/sp_13" />
    </RelativeLayout>
    <!--頂部狀態欄17dp-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/home_startpage"-->
    <!--android:textColorHighlight="@color/ffffff"-->
    <!--android:textStyle="normal"-->
    <!--android:textColor="#ffffffff"-->
    <!--android:textSize="@dimen/sp_24"-->
    <!--android:layout_marginLeft="@dimen/dp_16"-->
    <!--android:layout_marginTop="@dimen/dp_16"-->
    <!--/>-->
    <!--<ImageView-->
    <!--android:layout_width="@dimen/dp_19"-->
    <!--android:layout_height="@dimen/dp_20"-->
    <!--android:id="@+id/home_sourch_iv"-->
    <!--android:src="@mipmap/icon_search"-->
    <!--android:layout_marginTop="@dimen/dp_17"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_marginRight="@dimen/sp_15"-->
    <!--/>-->
    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bnve"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_alignParentBottom="true"
        android:background="@color/home_bottom_navigation_color_001838"
        app:itemIconTint="@color/blue"
        app:itemTextColor="@color/ffffff"
        app:menu="@menu/menu_navigation_with_view_pager" />
    <!--app:itemIconTint="@color/"-->
    <!--app:itemTextColor="@color/selector_item_color"-->
</RelativeLayout>